--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,8 @@ phases:
       - dotnet restore
       - echo "Publicando app..."
       - dotnet publish -c Release -o output
+      - echo "web: dotnet Api8.dll" > output/Procfile
+
 artifacts:
   files:
     - '**/*'
